<?xml version="1.0"?>
<package>
  <name>vigir_plan_execution</name>
  <version>0.0.0</version>
  <description>The vigir_plan_execution package</description>

  <maintainer email="kohlbrecher@todo.todo">kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vigir_planning_msgs</build_depend>
  <build_depend>vigir_moveit_utils</build_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vigir_planning_msgs</run_depend>
  <run_depend>vigir_moveit_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
